tests/baselines/reference/generatorTypeCheck58.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck58.ts(3,20): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck58.ts (1 errors) ====
    function* g() {
        class C {
            static x = yield 0;
                       ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
        };
    }